Recipe cards do not stretch across page, have fixed width

--- a/client/components/Recipes.module.css
+++ b/client/components/Recipes.module.css
@@ -35,11 +35,11 @@ body {
 
 .recipeCard {
   margin: 15px;
+  width: 18rem;
 }
 
 .recipeImg {
   height: 56.25%;
-  width: 18rem;
 }
 
 .button {
@@ -68,8 +68,8 @@ body {
 }
 
 .sectionHeader {
-  background-image:
-    linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(https://envato-shoebox-0.imgix.net/7207/244b-7205-498a-ac42-be724c0cc864/Grilled+meat_1_banner.jpg?auto=compress%2Cformat&fit=max&mark=https%3A%2F%2Felements-assets.envato.com%2Fstatic%2Fwatermark2.png&markalign=center%2Cmiddle&markalpha=18&w=1600&s=0733ee80d4d4d56268984666018bd1e5);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)),
+    url(https://envato-shoebox-0.imgix.net/7207/244b-7205-498a-ac42-be724c0cc864/Grilled+meat_1_banner.jpg?auto=compress%2Cformat&fit=max&mark=https%3A%2F%2Felements-assets.envato.com%2Fstatic%2Fwatermark2.png&markalign=center%2Cmiddle&markalpha=18&w=1600&s=0733ee80d4d4d56268984666018bd1e5);
   background-size: cover;
   background-position: center;
   padding: 100px 0;
